--- a/app/src/main/res/layout/fragment_ride_request.xml
+++ b/app/src/main/res/layout/fragment_ride_request.xml
@@ -16,28 +16,29 @@
         android:layout_height="match_parent"
         tools:context=".ui.rider.RideRequest">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tv_start_destination_layout"
-            style="?attr/textInputOutlinedExposedDropdownMenuStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:hint="@string/start_destination"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:startIconDrawable="@drawable/vc_map">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/map_fragment_auto_complete"-->
+<!--            style="?attr/textInputOutlinedExposedDropdownMenuStyle"-->
+<!--            android:name = "com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:hint="@string/start_destination"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:startIconDrawable="@drawable/vc_map">-->
 
-            <AutoCompleteTextView
-                android:id="@+id/tv_start_destination"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@={trip.startDestination}"/>
+<!--            <AutoCompleteTextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@={trip.startDestination}"/>-->
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
 
 
-        </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tv_end_destination"
@@ -50,19 +51,37 @@
             app:endIconMode="custom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_start_destination_layout">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="61dp"
                 android:text="@={trip.endDestination}" />
         </com.google.android.material.textfield.TextInputLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_end_destination"
+            android:background="@color/red"
+            >
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/map_fragment_auto_complete"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                tools:layout="@layout/fragment_profile"
+                />
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tv_choose_car"
             style="?attr/textInputOutlinedExposedDropdownMenuStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:hint="@string/choose"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none"
-                app:simpleItems="@array/simple_items" />
+                app:simpleItems="@array/vehicle_type" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.fragment.app.FragmentContainerView
