--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_top_forget_password">8dp</dimen>
+    <dimen name="width_person_image">50dp</dimen>
+    <dimen name="height_person_image">50dp</dimen>
 </resources>
