--- a/app/src/main/res/layout/card_list_of_driver.xml
+++ b/app/src/main/res/layout/card_list_of_driver.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -17,10 +18,12 @@
         app:cardElevation="8dp">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rc_available_drivers"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:list_data_of_available_drivers="@{AvailableDriver.availableDrivers}"
+            tools:listitem="@layout/card_detail_list_of_driver"
             />
 
     </com.google.android.material.card.MaterialCardView>
