--- a/app/src/main/res/layout/fragment_available_trip.xml
+++ b/app/src/main/res/layout/fragment_available_trip.xml
@@ -34,10 +34,10 @@
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintBottom_toTopOf="@id/btn_test_trigger"
             app:list_data_available_trip="@{viewModel.availableTrips}"
             tools:listitem="@layout/card_available_trips" />
 
