--- a/app/src/main/res/layout/activity_home_driver.xml
+++ b/app/src/main/res/layout/activity_home_driver.xml
@@ -7,11 +7,43 @@
 
     </data>
 
-    <androidx.fragment.app.FragmentContainerView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.driver.DriverActivity"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/main_driver" />
+        tools:context=".ui.driver.DriverActivity">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_driver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            app:title="@string/app_name"
+            >
+            <Switch
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/available"
+                android:layout_gravity="end"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment_driver"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            android:layout_below="@+id/toolbar_driver"
+            app:navGraph="@navigation/main_driver"
+            tools:layout="@layout/fragment_home_driver"
+            />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_app_bar_driver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="5dp"
+            app:menu="@menu/bottom_app_bar_driver" />
+    </RelativeLayout>
 </layout>
