--- a/app/src/main/res/navigation/main_driver.xml
+++ b/app/src/main/res/navigation/main_driver.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_driver">
+    android:id="@+id/main_driver"
+    app:startDestination="@id/homeDriverFragment">
 
+    <fragment
+        android:id="@+id/homeDriverFragment"
+        android:name="com.theideal.goride.ui.driver.HomeDriverFragment"
+        android:label="HomeDriverFragment" >
+        <action
+            android:id="@+id/action_homeDriverFragment_to_servicesDriverFragment"
+            app:destination="@id/servicesDriverFragment" />
+        <action
+            android:id="@+id/action_homeDriverFragment_to_profileDriverFragment"
+            app:destination="@id/profileDriverFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileDriverFragment"
+        android:name="com.theideal.goride.ui.driver.ProfileDriverFragment"
+        android:label="ProfileDriverFragment" />
+    <fragment
+        android:id="@+id/servicesDriverFragment"
+        android:name="com.theideal.goride.ui.driver.ServicesDriverFragment"
+        android:label="ServicesDriverFragment" />
 </navigation>
