--- a/app/src/main/res/layout/activity_work_in_specific_trip.xml
+++ b/app/src/main/res/layout/activity_work_in_specific_trip.xml
@@ -5,5 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.driver.home.home_services.work_in_specific_trip.WorkInSpecificTripActivity">
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/work_in_specific_trip"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
